# ddr-ai-system

./: .gitignore  README.md
ddr_ai_system/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
ddr_ai_system/.streamlit/: config.toml
ddr_ai_system/alembic/: env.py
ddr_ai_system/alembic/versions/: 0001_initial_schema.py  0002_section_table_rows.py  0003_failure_activity_correlation.py  0004_seed_versions.py  0005_retrieval_and_asset_storage.py  0006_ml_document_ai_and_reviews.py
ddr_ai_system/assets/: styles.css
ddr_ai_system/data/evaluation/: ocr_manifest.csv
ddr_ai_system/data/models/: activity_classifier.metadata.json
ddr_ai_system/data/processed/: audit_summary.json  evaluation_summary.json  input_inventory.csv  processing_manifest.csv  section_table_summary.json
ddr_ai_system/docs/: ARCHITECTURE.md  ASSUMPTIONS.md  DATA_AUDIT.md  DATA_DICTIONARY.md  DEPLOYMENT.md  EVALUATION.md  EXTRACTION_RULES.md  OLLAMA.md  PROGRESS.md  SECURITY.md  TASK_COMPLIANCE.md  TASK_INTERPRETATION.md  USER_GUIDE.md
ddr_ai_system/scripts/: audit_inputs.py  backfill_activity_taxonomy.py  backfill_retrieval_chunks.py  backfill_section_tables.py  bootstrap_inputs.py  build_embedding_index.py  evaluate_activity_classifier.py  evaluate_chat.py  evaluate_ocr.py  evaluate_pipeline.py  generate_analytics.py  generate_ml_anomalies.py  ingest_documents.py  process_all.py  reprocess_failure_correlations.py  seed_demo.py  seed_production.py  train_activity_classifier.py  verify_failure_sources.py
ddr_ai_system/src/ddr_ai/: __init__.py  assets.py  build_info.py  cli.py  config.py
ddr_ai_system/tests/: conftest.py
ddr_ai_system/tests/integration/: test_database_chat.py  (+8 more)
(+82 files in other folders)
